# nnfw-svn

branches/2.0.0/: CHANGELOG  CMakeLists.txt  CREDITS  FindNNFW.cmake  Fondere_2_Librerie.txt  NNFWConfig.cmake  NNFWConfig.cmake.in  NNFWConfigVersion.cmake  nnframework.kateproject
branches/2.0.0/apidoc/: footer-doxygen.html
branches/2.0.0/cinterface/: cnnfw.cpp  cnnfw.h
branches/2.0.0/examples/: CMakeLists.txt
branches/2.0.0/examples/algebra1/: algebra1.cpp
branches/2.0.0/examples/c_xor/: c_xor.cpp
branches/2.0.0/examples/xor/: xor.cpp
branches/2.0.0/examples/xor2/: net.ini  xor2.cpp
branches/2.0.0/examples/xor3/: net.ini  xor3.cpp
branches/2.0.0/examples/xor_sparse/: xor_s.cpp
branches/2.0.0/include/: algebra.h  backpropagationalgo.h  biasedcluster.h  clonable.h  cluster.h  copylinker.h  ddecluster.h  dotlinker.h  fakecluster.h  ionnfw.h  learningalgorithm.h  libcompetitivefunctions.h  liboutputfunctions.h  libperiodicfunctions.h  libradialfunctions.h  linker.h  matrices.h  matrixdata.h  matrixlinker.h  memutils.h  neuralnet.h  nnfw.h  nnfwfactory.h  normlinker.h  observ.h  outputfunction.h  primtypes.h  propertized.h  random.h  realmat.h  realvec.h  simplecluster.h  sparsematrixlinker.h  types.h  updatable.h  utils.h  vectordata.h  vectors.h
branches/2.0.0/lib/: mergelinuxlib
branches/2.0.0/src/: backpropagationalgo.cpp  biasedcluster.cpp  cluster.cpp  copylinker.cpp  ddecluster.cpp  dotlinker.cpp  fakecluster.cpp  ionnfw.cpp  learningalgorithm.cpp  libcompetitivefunctions.cpp  liboutputfunctions.cpp  libperiodicfunctions.cpp  libradialfunctions.cpp  linker.cpp  matrixlinker.cpp  messages.cpp  neuralnet.cpp  nnfwfactory.cpp  nnfwlibinitializer.cpp  normlinker.cpp  outputfunction.cpp  propertized.cpp  random.cpp  realmat.cpp  realvec.cpp  simplecluster.cpp  sparsematrixlinker.cpp  types.cpp  updatable.cpp  utils.cpp  xmlnnfw.cpp
flexynet/: CMakeLists.txt  Doxyfile  neuralnet.nnx  neuralnet.xml
flexynet/icons/: icons.qrc
flexynet/include/: baseneuralnetmodel.h  clustereditor.h  clustermodel.h  clusterplotter.h  clusterplotter2.h  clusterrenderer.h  fbrowser.h  fnnwrapper.h  graphicscluster.h  graphicslinker.h  linkermodel.h  linkerrenderer.h  mainWindow.h  modelmaps.h  neuralnetview.h  nnplotter.h  nnrenderer.h  outputfunctionmodel.h  propertizedmodel.h  types.h  updatablemodel.h
flexynet/src/: baseneuralnetmodel.cpp  clustermodel.cpp  clusterplotter.cpp  clusterplotter2.cpp  clusterrenderer.cpp  fbrowser.cpp  graphicscluster.cpp  graphicslinker.cpp  linkermodel.cpp  linkerrenderer.cpp  main.cpp  mainWindow.cpp  modelmaps.cpp  neuralnetview.cpp  nnplotter.cpp  nnrenderer.cpp  outputfunctionmodel.cpp  propertizedmodel.cpp  updatablemodel.cpp
manual/: Doxyfile  footer-doxygen.html  header-doxygen.html  manual.kateproject  nnfw_manual.tex  style-doxygen.css
manual/src/: createCluster.dox  createLinker.dox  introduction.dox  mainpage.dox  mathstuff.dox  overture.dox  preface.dox  tour.dox  xmlformat.dox
qtnnfw/icons/: icons.qrc
qtnnfw/include/: clusterrenderer.h  linkerrenderer.h  mainWindow.h  nnrenderer.h
qtnnfw/src/: clusterrenderer.cpp  linkerrenderer.cpp  main.cpp  nnrenderer.cpp
trunk/: CHANGELOG  CMakeLists.txt  CREDITS  Doxyfile  NNFWConfig.cmake  RELEASENOTES  nnframework.kateproject  nnframework.pro  nnframework_linuxstatic_pro
trunk/apidoc/: footer-doxygen.html  header-doxygen.html  iestyle.css  style-doxygen.css  style.css
trunk/cinterface/: cnnfw.cpp  cnnfw.h
trunk/docs/: NNFramework.lyx  header-doxygen.html  style-doxygen.css
trunk/examples/: examples.pro
trunk/examples/nnfw_vs_mint/: arch.h  check.h  image.h  load_utils.h  mint.net  network.h  nnfw_vs_mint.cpp  nnfw_vs_mint.pro  nodes.h  nupdate_lib.h  random.h  random_search.h  spread.h  update.h  utils.h  weights.h  wupdate_lib.h
trunk/examples/test1/: test1.cpp  test1.pro
trunk/examples/test2/: Makefile  gmon.out  test2  test2.cpp  test2.pro
trunk/include/: backpropagationalgo.h  biasedcluster.h  blockslearning.h  clonable.h  cluster.h  clusterupdater.h  copylinker.h  ddecluster.h  derivableclusterupdater.h  derivableoutputfunction.h  dotlinker.h  fakecluster.h  ionnfw.h  learningalgorithm.h  learningnetwork.h  libclusterupdaters.h  libcompetitivefunctions.h  libmatrixmodifiers.h  liboutputfunctions.h  libperiodicfunctions.h  libradialfunctions.h  linker.h  matrixdata.h  matrixlinker.h  memutils.h  messages.h  modifier.h  neuralnet.h  nnfw.h  nnfwfactory.h  normlinker.h  observ.h  outputfunction.h  primtypes.h  propertized.h  random.h  realmat.h  realvec.h  simplecluster.h  sparsematrixlinker.h  (+5 more)
trunk/src/: backpropagationalgo.cpp  biasedcluster.cpp  blockslearning.cpp  cluster.cpp  clusterupdater.cpp  copylinker.cpp  ddecluster.cpp  dotlinker.cpp  fakecluster.cpp  ionnfw.cpp  learningalgorithm.cpp  learningnetwork.cpp  libclusterupdaters.cpp  libcompetitivefunctions.cpp  libmatrixmodifiers.cpp  liboutputfunctions.cpp  libperiodicfunctions.cpp  libradialfunctions.cpp  linker.cpp  matrixlinker.cpp  messages.cpp  neuralnet.cpp  nnfwfactory.cpp  normlinker.cpp  outputfunction.cpp  propertized.cpp  random.cpp  realmat.cpp  realvec.cpp  simplecluster.cpp  sparsematrixlinker.cpp  supervisedlearning.cpp  types.cpp  updatable.cpp  utils.cpp  xmlnnfw.cpp
